// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allOf operator renders allOf in request 1`] = `
[
  "## Request",
  "#||| **method** | **url** | **description** ||",
  "|| ",
  "\`\`\`",
  "POST",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "http://localhost:8080/complex",
  "\`\`\`",
  " | ",
  "\`\`\`",
  "Generated server url",
  "\`\`\`",
  " |||#",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "name": "b",",
  "    "age": {}",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| name | string | Default: \`b\` ||",
  "|| age | object |  ||",
  "|| ...rest | oneOf | [Dog](#dog)",
  "or [Cat](#cat) |||#",
  "#### Or value from:",
  "### Dog",
  "Dog class",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| bar | string |  |||#",
  "### Cat",
  "Cat class",
  "#||| **Name** | **Type** | **Description** ||",
  "|| type | string |  ||",
  "|| foo | string |  |||#",
]
`;

exports[`allOf operator renders allOf in response 1`] = `
[
  "## 200 OK",
  "Base 200 response",
  "#### Body",
  "{% cut "application/json" %}",
  "\`\`\`",
  "{",
  "    "name": "b",",
  "    "age": {}",
  "}",
  "\`\`\`",
  "{% endcut %}",
  "#||| **Name** | **Type** | **Description** ||",
  "|| name | string | Default: \`b\` ||",
  "|| age | object |  ||",
  "|| ...rest | oneOf | [Dog](#dog)",
  "or [Cat](#cat) |||#",
  "#### Or value from:",
]
`;
